again little fixes